--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 :root {
-  --primary: #DFD0B8;
-  --primary2: #948979;
-  --bg: #222831;
+  --primary2: #DFD0B8;
+  --primary: #948979;
+  /* --primary: #697565; */
+  --bg3: #222831;
   --bg2: #393E46;
+  --bg: #000;
 }
 
 * {
@@ -139,4 +141,71 @@ body {
   background-color: var(--primary);
   border-radius: 0.5rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 1, 0.5);
+}
+
+/* About Section */
+.about, 
+.menu, 
+.contact {
+  padding: 8rem 7% 1.4rem;
+}
+
+.about h2,
+.menu h2,
+.contact h2 {
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 3rem;
+}
+
+.about h2 span,
+.menu h2 span,
+.contact h2 span {
+  color: var(--primary);
+}
+
+.row {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.about-image img {
+    width: 500px;
+    /* max-width: 400px; */
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.about-text {
+    flex: 1;
+    min-width: 300px;
+}
+
+.about-text .label {
+    color: #d48806;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.about-text h3 {
+    font-size: 1.7rem;
+    margin-top: 0;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    color: #fff;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+}
+
+.about-text h3 span {
+  color: var(--primary);
+}
+
+.about-text p {
+    font-size: 1rem;
+    line-height: 1.8;
+    margin-bottom: 15px;
 }
