--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
-  --bg: #F4F4F2;
-  --bg2: #E8E8E8;
+  --bg: #f4f4f2;
+  --bg2: #e8e8e8;
   --primary: #495464;
-  --text: #1C2B2D;
+  --text: #1c2b2d;
+  --hover: #8294af;
 }
 
 * {
@@ -28,7 +29,7 @@ body {
   align-items: center;
   padding: 1.4rem 7%;
   background-color: var(--bg2);
-  border-bottom: 1px solid var(--bg)2;
+  border-bottom: 1px solid var(--bg) 2;
   position: fixed;
   top: 0;
   left: 0;
@@ -96,11 +97,6 @@ body {
   width: 100%;
   height: 20%;
   bottom: 0;
-  /* background: linear-gradient(
-    0deg,
-    var(--primary) 1%,
-    rgba(255, 255, 255, 0) 50%
-  ); */
 }
 
 .hero .content {
@@ -139,9 +135,14 @@ body {
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 1, 0.5);
 }
 
+.hero .content .cta:hover {
+  background-color: var(--text);
+  transition: all 0.3s linear;
+}
+
 /* About Section */
-.about, 
-.contact, 
+.about,
+.contact,
 .location {
   padding: 8rem 7% 1.4rem;
 }
@@ -201,17 +202,17 @@ body {
 /* Contact Section */
 .contact h2,
 .location h2 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .contact p,
 .location p {
-    text-align: center;
-    max-width: 30rem;
-    margin: auto;
-    font-weight: 300;
-    line-height: 1.6;
-    color: var(--text);
+  text-align: center;
+  max-width: 30rem;
+  margin: auto;
+  font-weight: 300;
+  line-height: 1.6;
+  color: var(--text);
 }
 
 .contact .row {
@@ -255,3 +256,52 @@ body {
   color: #555;
   margin-bottom: 10px;
 }
+
+/* location Section */
+
+.location {
+  background-color: var(--bg2);
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  min-height: 100vh;
+  color: var(--bg2);
+}
+
+.location .row {
+  margin-top: 2rem;
+  background-color: #ffffff;
+  border-radius: 0.8rem;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.4);
+}
+
+.location .map {
+  margin: 50px;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  border-radius: 0.8rem;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.location .btn {
+  padding: 12px 24px;
+  background-color: var(--primary );
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 6px;
+  transition: all 0.3s ease;
+  margin-bottom: 35px;
+}
+
+.location .btn:hover {
+  background-color: var(--text);
+}
+
+
