--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 7%;
-  /* background-color: var(--bg2); */
+  background-color: var(--bg2);
   border-bottom: 1px solid var(--bg) 2;
   position: fixed;
   max-height: 90px;
@@ -36,7 +36,7 @@ body {
   left: 0;
   right: 0;
   z-index: 9999;
-  background: linear-gradient(to top, #e8e8e800, #e8e8e8 80%);
+  /* background: linear-gradient(to top, #e8e8e800, #e8e8e8 80%); */
 }
 
 .navbar img {
@@ -281,7 +281,7 @@ body {
 }
 
 .location .map {
-  margin: 50px;
+  margin: 35px;
   margin-bottom: 40px;
   display: flex;
   justify-content: center;
@@ -371,4 +371,102 @@ body {
 .footer-bottom a {
   color: var(--text);
   text-decoration: none;
+}
+
+/* Media Queries */
+/* Laptop */
+@media (max-width: 1366px) {
+  html {
+    font-size: 75%;
+  }
+}
+/* Tablet */
+@media (max-width: 768px) {
+  html {
+    font-size: 62.5%;
+  }
+
+  #hamburger-menu {
+    display: inline-block;
+  }
+
+  .navbar .navbar-nav {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background-color: var(--bg2);
+    width: 30rem;
+    height: 100vh;
+    transition: 0.3s;
+    text-align: center;
+  }
+
+  .navbar .navbar-nav.active {
+    right: 0;
+  }
+
+  .navbar .navbar-nav a {
+    color: var(--text);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+
+  .navbar .navbar-nav a::after {
+    transform-origin: 0, 0;
+  }
+
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
+  }
+
+  .about .row {
+    flex-wrap: wrap;
+  }
+
+  .about .row .about-img img {
+    height: 24rem;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem
+  }
+
+  .about .row .content p {
+    font-size: 1.6rem;
+  }
+
+  .contact p {
+    font-size: 1.2rem;
+  }
+
+  .location .row {
+    flex-wrap: wrap;
+  }
+
+  .location p {
+    font-size: 1.4rem;
+  }
+
+  .location .row .map {
+    height: 30rem;
+    width: 60rem;
+  }
+
+  .location .row form {
+    padding-top: 0;
+  }
+}
+/* Mobile Phone */
+@media (max-width: 450px) {
+  html {
+    font-size: 55%;
+  }
 }
